・画像をクリップボードから貼る機能を追加 ・ログ出力でスレッドIDの取得方法を変更 ・画像をアップロードするとキャプションが消えるバグを修正